--- a/test/geo/polygon/001_basic.html
+++ b/test/geo/polygon/001_basic.html
@@ -33,8 +33,8 @@ window.addEventListener( 'load', async _=>{
         Debug.pnt.add( p, 0x00ff00, 3 );
     }
 
-    for( let e of poly.iterVec3Edges() ){
-        Debug.ln.add( e.a, e.b, 0x00ff00 );
+    for( let e of poly.iterEdges() ){
+        Debug.ln.add( e.a.toVec3(), e.b.toVec3(), 0x00ff00 );
     }
     
     // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
